# strands-coder

./: .gitignore  README.md  SYSTEM_PROMPT.md  action.yml  pyproject.toml  setup-aws-oidc.sh
.github/workflows/: agent.yml  auto-release.yml  control.yml
docs/: CNAME  index.html
strands_coder/: __init__.py  agent_runner.py  context.py
strands_coder/tools/: __init__.py  create_subagent.py  github_tools.py  projects.py  scheduler.py  store_in_kb.py  system_prompt.py  use_github.py
tools/: use_langfuse.py
