[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-coder"
dynamic = ["version"]
description = "Add an AI assistant to your GitHub repositories that can review code, manage issues, and improve over time."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AWS", email = "opensource@amazon.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "strands-agents",
    "strands-agents[all]",
    "strands-agents-tools",
    "colorama>=0.4.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/cagataycali/strands-coder"
"Bug Tracker" = "https://github.com/cagataycali/strands-coder/issues"
Documentation = "https://strandsagents.com/"
Repository = "https://github.com/cagataycali/strands-coder"

[project.scripts]
strands-coder = "strands_coder.agent_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["strands_coder"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"
raw-options = { search_parent_directories = true }

[project.optional-dependencies]
dev = [
    "commitizen>=4.4.0,<5.0.0",
    "hatch>=1.0.0,<2.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pre-commit>=3.2.0,<4.6.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-asyncio>=1.0.0,<1.4.0",
    "ruff>=0.12.0,<0.15.0",
    "types-requests>=2.25.0",
    "types-colorama>=0.4.0",
    "boto3-stubs[bedrock-agent-runtime]>=1.26.0",
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = [
    "mypy>=1.15.0,<2.0.0",
    "ruff>=0.12.0,<0.15.0",
    "types-requests>=2.25.0",
    "types-colorama>=0.4.0",
    "boto3-stubs[bedrock-agent-runtime]>=1.26.0",
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = ["ruff format --check"]
format-fix = ["ruff format"]
lint-check = [
    "ruff check",
    "mypy -p strands_coder"
]
lint-fix = ["ruff check --fix"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-asyncio>=1.0.0,<1.4.0",
    "pytest-xdist>=3.0.0,<4.0.0",
]
extra-args = ["-n", "auto", "-vv"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10"]

[tool.hatch.envs.hatch-test.scripts]
run = ["pytest{env:HATCH_TEST_ARGS:} {args}"]
run-cov = [
    "pytest{env:HATCH_TEST_ARGS:} --cov --cov-config=pyproject.toml {args}",
]
cov-combine = []
cov-report = []

[tool.hatch.envs.default.scripts]
list = [
    "echo 'Scripts commands available for default env:'; hatch env show --json | jq --raw-output '.default.scripts | keys[]'",
]
format = ["hatch fmt --formatter"]
test-format = ["hatch fmt --formatter --check"]
lint = ["hatch fmt --linter"]
test-lint = ["hatch fmt --linter --check"]
test = ["hatch test --cover --cov-report html --cov-report xml {args}"]
prepare = [
    "hatch run format",
    "hatch run lint",
    "hatch run test-lint",
    "hatch run test"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_untyped_imports = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "strands.*",
    "strands_tools.*",
    "boto3.*",
    "rich.*",
    "mcp.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "strands_coder.tools.*"
]
disallow_untyped_decorators = false

[tool.ruff]
line-length = 120
include = ["strands_coder/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]

[tool.coverage.run]
branch = true
source = ["strands_coder"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "build/coverage/html"

[tool.coverage.xml]
output = "build/coverage/coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
bump_message = "chore(release): bump version $current_version -> $new_version"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true